<resources>
    <string name="app_name">local_component</string>
    <string name="text_search_danmu">搜索弹幕</string>
    <string name="text_local_danmu">本地弹幕</string>
    <string name="text_search_subtitle">搜索字幕</string>
    <string name="text_local_subtitle">本地字幕</string>
    <string name="text_default_directory">默认根目录</string>
    <string name="text_current_path">当前：</string>
    <string name="tips_subtitle_zip_name">文件名：</string>
    <string name="hint_subtitle_search">视频名</string>
    <string name="hint_danmu_search">番剧名</string>
    <string name="tips_input_episode1">第</string>
    <string name="tips_input_episode2">集</string>
    <string name="tips_ova">剧场版</string>
    <string name="tips_all_result">全部结果</string>
    <string name="action_add_play_link">添加播放链接</string>
    <string name="action_play_last_video">播放上一次观看</string>
    <string name="rule_stream_link_header">key : value ;</string>
    <string name="text_advanced_link">高级设置</string>
    <string name="tips_request_header">请求头:</string>
    <string name="item_remove_history">删除</string>
    <string name="item_select_all_history">全选</string>
    <string name="action_add_media_storage">添加媒体库</string>
    <string name="action_select_torrent_file">选择种子文件</string>
    <string name="tips_input_magnet_link">请输入磁链</string>
    <string name="add_new_danmu_download">新建下载</string>
    <string name="text_shooter_setting">api设置</string>
    <string name="tips_api_limit">搜索API有频率限制，超过限制后请稍等一段时间后再操作</string>
    <string name="hint_shooter_secret">射手(伪)网API密钥</string>
    <string name="question_why_need_secret">Q：为什么需要API密钥？</string>
    <string name="answer_why_need_secret">A：搜索功能通过 射手(伪)网(https://assrt.net) 开源API实现，因此使用搜索功能需要用户提供在射手(伪)网的API密钥</string>
    <string name="question_where_get_secret">Q：去哪里获取API密钥？</string>
    <string name="answer_where_get_secret">A：获取API密钥需登录射手(伪)网，在用户面板取得</string>
    <string name="action_get_secret">前往射手(伪)网获取密钥</string>
    <string name="text_default_format_danmu">默认</string>
    <string name="text_simplified_format_danmu">简体</string>
    <string name="text_traditional_format_danmu">繁体</string>
    <string name="tips_danmu_history_keyword">上次搜索</string>
    <string name="tips_danmu_search_keyword">关键字</string>
    <string name="tips_danmu_search_file_name">文件名（长按可复制）</string>

    <string name="text_search_file">搜索文件</string>
    <string name="action_clear_history">清空播放记录</string>
    <string name="search">搜索</string>
    <string name="tips_search_danmu">搜索弹幕：番剧名+空格+集数</string>
    <string name="tips_search_subtitle">搜索字幕：番剧名</string>
    <string name="tips_screencast_providing">投屏中</string>

    <string name="text_file_sort">排序</string>
    <string name="text_sort_by_time">时间</string>
    <string name="text_sort_by_name">名称</string>
    <string name="text_sort_order_asc">升序</string>

    <string name="action_unbind_danmu">移除弹幕绑定</string>
    <string name="action_select_danmu_file">选取本地弹幕</string>

    <string name="action_unbind_subtitle">移除字幕绑定</string>
    <string name="action_select_subtitle_file">选取本地字幕</string>
    <string name="action_subtitle_key_setting">字幕API密钥</string>

    <string name="action_modify_user_agent">修改User-Agent</string>
</resources>
