<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/danmu_source_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/danmu_source_describe_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:ellipsize="start"
            android:singleLine="true"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/danmu_format_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/danmu_default_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/text_default_format_danmu" />

            <RadioButton
                android:id="@+id/danmu_simplified_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text_simplified_format_danmu" />

            <RadioButton
                android:id="@+id/danmu_traditional_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text_traditional_format_danmu" />

        </RadioGroup>

    </LinearLayout>
</layout>