<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/anime_name_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/background_dialog_edit"
            android:gravity="center_vertical"
            android:hint="@string/hint_danmu_search"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/episode_type_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/other_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:checked="true"
                    android:text="@string/tips_all_result"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/episode_ll"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/episode_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ova_rb"
                    app:layout_constraintStart_toEndOf="@id/other_rb"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/episode_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/episode_start_tips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tips_input_episode1"
                        android:textColor="@color/text_black"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/episode_et"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:gravity="center"
                        android:hint=""
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/text_black"
                        android:textColorHint="@color/text_gray"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tips_input_episode2"
                        android:textColor="@color/text_black"
                        android:textSize="14sp" />
                </LinearLayout>

                <RadioButton
                    android:id="@+id/ova_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/tips_ova"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/episode_ll"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RadioGroup>

        <TextView
            android:id="@+id/keyword_history_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tips_danmu_history_keyword"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/history_keyword_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_search_keyword"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textColor="@color/text_black"
            android:textIsSelectable="true"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/keyword_labels_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tips_danmu_search_keyword"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:visibility="gone" />

        <com.xyoye.common_component.weight.LabelsView
            android:id="@+id/keyword_labels_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:labelBackground="@drawable/background_search_keyword"
            app:labelTextColor="@color/text_gray"
            app:labelTextPaddingBottom="5dp"
            app:labelTextPaddingLeft="10dp"
            app:labelTextPaddingRight="10dp"
            app:labelTextPaddingTop="5dp"
            app:labelTextSize="14sp"
            app:lineMargin="10dp"
            app:maxLines="3"
            app:maxSelect="0"
            app:selectType="MULTI"
            app:wordMargin="10dp" />

        <TextView
            android:id="@+id/file_name_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tips_danmu_search_file_name"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/file_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            android:visibility="gone" />

    </LinearLayout>
</layout>