<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/link_input_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/background_dialog_edit"
            android:gravity="center_vertical"
            android:hint=""
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/advanced_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_advanced_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/link_input_et"
            app:theme="@style/Theme.DanDanPlay.CheckBox" />

        <TextView
            android:id="@+id/header_input_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_request_header"
            android:textColor="@color/text_black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/header_input_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_input_et" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/header_input_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:hint="@string/rule_stream_link_header"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_input_tips"
            app:layout_constraintTop_toBottomOf="@id/advanced_cb" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>