<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/item_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/action_layout"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/item_bg_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_unbind_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_source_action"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/action_unbind_subtitle"
                android:textColor="@color/selector_action_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_select_local_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_source_action"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/action_select_subtitle_file"
                android:textColor="@color/selector_action_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_setting_subtitle_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_source_action"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/action_subtitle_key_setting"
                android:textColor="@color/selector_action_color"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/layout_bg_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subtitle_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_cl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/empty_iv"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/ic_empty_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.382" />

            <TextView
                android:id="@+id/empty_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_empty_data"
                android:textColor="@color/text_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/empty_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>